# poetry-test-project

./: pyproject.toml
src1/hello1/: __init__.py
src2/hello2/: __init__.py
