[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Petter Strandmark <petter.strandmark@gmail.com>"]
packages = [
    { include = "hello1", from="src1"},
    { include = "hello2", from="src2"}, 
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
